<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/first_blue"
        tools:context=".MainActivity2">
        <TextView
            android:id="@+id/txtUserLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            style="@style/TextStyleNormal"
            />
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/txtLogout"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_power_off"
            android:drawablePadding="10dp"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            style="@style/ButtonLogout"
            />
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_below="@+id/btnLogout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            />
        <LinearLayout
            android:id="@+id/firstOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:id="@+id/imgNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/periodico"
                android:text="@string/txtNews"
                android:textAlignment="center"
                style="@style/imageContainer"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                 />
            <TextView
                android:id="@+id/imgProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/cajas"
                android:text="@string/txtProducts"
                android:textAlignment="center"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                style="@style/imageContainer" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/firstOptions"
            >
            <TextView
                android:id="@+id/imgAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/acerca_de"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:text="@string/txtAbout"
                android:textAlignment="center"
                style="@style/imageContainer"
                 />
            <TextView
                android:id="@+id/imgContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/contacto"
                android:text="@string/txtContact"
                android:textAlignment="center"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                style="@style/imageContainer"
                />
        </LinearLayout>




    </RelativeLayout>

</layout>