<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
</data>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_2"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:layout_above="@+id/inp_user"
            android:layout_centerHorizontal="true"
            style="@style/customTextView"
            />
        <EditText
            android:id="@+id/inp_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/txtEditTextUser"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="5dp"
            android:layout_centerInParent="true"
            style="@style/TextStyleNormal"

            android:padding="15dp"
            android:inputType="textEmailAddress" />

        <!--EditText
            android:id="@+id/inp_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/txtEditTextPassword"
            android:inputType="textPassword"
            android:layout_below="@+id/inp_user"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="5dp"
            style="@style/TextStyleNormal"
            android:background="@drawable/input_blue"
            android:padding="15dp" /-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inp_pass"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@+id/inp_user"
            android:textColor="@color/first_blue"
            android:textColorHint="@color/first_blue"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"

            android:hint="@string/txtEditTextPassword"

            app:hintTextColor="@color/first_blue"
            app:helperTextTextColor="@color/first_blue"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/first_blue">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextStyleNormal"


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/first_blue"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_1"
            android:text="@string/txtButton"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:layout_below="@+id/inp_pass"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            style="@style/Button" />
</RelativeLayout>
</layout>